fixed spacing

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -280,3 +280,7 @@ h9 {
     text-align: center;
     margin: 0 auto;
 }
+
+#about-well {
+    margin-top: 70px;
+}
